<resources>
    <string name="app_name" translatable="false">StarCode</string>
    <string name="access_camera_not_grant">Please grant camera permission to use the QR Scanner</string>
    <string name="qrcode_title" translatable="false">StarCode - QR Code</string>
    <string name="no_connection">No internet connection</string>
    <string name="no_chars_registered">No chars registered</string>
    <string name="chars_already_registered">Char already registered!</string>
    <string name="invalid_url">Invalid URL!</string>
    <string name="pager_title_info">Infos</string>
    <string name="pager_title_films">Films</string>
    <string name="pager_title_ships">Ships</string>
    <string name="pager_title_vehicle">Vehicles</string>
    <string name="chars_updated">Char updated!</string>
    <string name="char_details">Char\'s Details</string>
    <string name="pager_info_name">name</string>
    <string name="pager_info_height">height</string>
    <string name="pager_info_mass">mass</string>
    <string name="pager_info_hair_color">hair color</string>
    <string name="pager_info_skin_color">skin color</string>
    <string name="pager_info_eye_color">eye color</string>
    <string name="pager_info_birth_year">birth year</string>
    <string name="pager_info_gender">gender</string>
    <string name="pager_info_homeworld">homeworld</string>
    <string name="pager_info_species">specie</string>
    <string name="pager_info_date">date</string>
    <string name="pager_info_time">time</string>
    <string name="pager_info_url">url</string>
    <string name="pager_info_location">location</string>
    <string name="meters">m</string>
    <string name="kilogram">kg</string>
    <string name="loading">Loading</string>
    <string name="no_films_found">No films found</string>
    <string name="director_name">Director:</string>
    <string name="producer_name">Producer:</string>
    <string name="release_date">Release Date:</string>
    <string name="ship_model">Model:</string>
    <string name="no_ships_found">No ships found</string>
    <string name="no_vehicles_found">No vehicles found</string>
    <string name="action_cancelled">Action cancelled</string>
    <string name="no_camera_found">Your device doesn\'t have a camera</string>
    
    
    <!-- Birth Year Strings -->

    <string name="info_unknown">unknown</string>
    
    <!-- Eye Color Strings -->

    <string name="eye_color_black">black</string>
    <string name="eye_color_blue">blue</string>
    <string name="eye_color_blue_gray">blue-gray</string>
    <string name="eye_color_brown">brown</string>
    <string name="eye_color_dark">dark</string>
    <string name="eye_color_gold">gold</string>
    <string name="eye_color_green_yellow">green, yellow</string>
    <string name="eye_color_hazel">hazel</string>
    <string name="eye_color_orange">orange</string>
    <string name="eye_color_pink">pink</string>
    <string name="eye_color_red">red</string>
    <string name="eye_color_red_blue">red, blue</string>
    <string name="eye_color_white">white</string>
    <string name="eye_color_yellow">yellow</string>

    <!-- Gender Strings -->

    <string name="gender_female">female</string>
    <string name="gender_hermaphrodite">hermaphrodite</string>
    <string name="gender_male">male</string>
    <string name="gender_na">n/a</string>
    <string name="gender_none">none</string>

    <!-- Hair Color Strings -->

    <string name="hair_color_auburn">auburn</string>
    <string name="hair_color_auburn_grey">auburn, grey</string>
    <string name="hair_color_auburn_white">auburn, white</string>
    <string name="hair_color_black">black</string>
    <string name="hair_color_blond">blond</string>
    <string name="hair_color_blonde">blonde</string>
    <string name="hair_color_brown">brown</string>
    <string name="hair_color_brown_grey">brown, grey</string>
    <string name="hair_color_grey">grey</string>
    <string name="hair_color_na">n/a</string>
    <string name="hair_color_none">none</string>
    <string name="hair_color_white">white</string>

    <!-- Skin Color Strings -->

    <string name="skin_color_blue">blue</string>
    <string name="skin_color_blue_grey">blue, grey</string>
    <string name="skin_color_brown">brown</string>
    <string name="skin_color_brown_mottle">brown mottle</string>
    <string name="skin_color_brown_white">brown, white</string>
    <string name="skin_color_dark">dark</string>
    <string name="skin_color_fair">fair</string>
    <string name="skin_color_fair_green_yellow">fair, green, yellow</string>
    <string name="skin_color_gold">gold</string>
    <string name="skin_color_green">green</string>
    <string name="skin_color_green_gray">green, gray</string>
    <string name="skin_color_green_tan_brown">green-tan, brown</string>
    <string name="skin_color_grey">grey</string>
    <string name="skin_color_grey_blue">grey, blue</string>
    <string name="skin_color_grey_green_yellow">grey, green, yellow</string>
    <string name="skin_color_grey_red">grey, red</string>
    <string name="skin_color_light">light</string>
    <string name="skin_color_metal">metal</string>
    <string name="skin_color_mottled_green">mottled green</string>
    <string name="skin_color_none">none</string>
    <string name="skin_color_orange">orange</string>
    <string name="skin_color_pale">pale</string>
    <string name="skin_color_red">red</string>
    <string name="skin_color_red_blue_white">red, blue, white</string>
    <string name="skin_color_silver_red">silver, red</string>
    <string name="skin_color_tan">tan</string>
    <string name="skin_color_white">white</string>
    <string name="skin_color_white_blue">white, blue</string>
    <string name="skin_color_white_red">white, red</string>
    <string name="skin_color_yellow">yellow</string>


    <!-- Species Strings -->

    <string name="species_droid">droid</string>
    <string name="gender_human">human</string>
    <string name="gender_yoda">yoda\'s species</string>


</resources>
