<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
               >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pager_info_name"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pager_info_height"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pager_info_mass"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pager_info_hair_color"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pager_info_skin_color"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pager_info_eye_color"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pager_info_birth_year"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pager_info_gender"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pager_info_homeworld"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pager_info_species"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pager_info_date"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pager_info_time"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pager_info_url"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pager_info_location"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:textAllCaps="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:textColor="@color/textColorItemPrimary"
                    android:textSize="17sp"
                    tools:text="Luke Skywalker"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:textColor="@color/textColorItemPrimary"
                    android:textSize="17sp"
                    tools:text="1.72"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/mass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:textColor="@color/textColorItemPrimary"
                    android:textSize="17sp"
                    tools:text="88"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/hair_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:textColor="@color/textColorItemPrimary"
                    android:textSize="17sp"
                    tools:text="Blonde"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/skin_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:textColor="@color/textColorItemPrimary"
                    android:textSize="17sp"
                    tools:text="White"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/eye_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:textColor="@color/textColorItemPrimary"
                    android:textSize="17sp"
                    tools:text="Blue"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/birth_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:textColor="@color/textColorItemPrimary"
                    android:textSize="17sp"
                    tools:text="99BBY"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:textColor="@color/textColorItemPrimary"
                    android:textSize="17sp"
                    tools:text="Male"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/homeworld"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:textColor="@color/textColorItemPrimary"
                    android:textSize="17sp"
                    tools:text="Planet"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/specie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:textColor="@color/textColorItemPrimary"
                    android:textSize="17sp"
                    tools:text="Specie"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:textColor="@color/textColorItemPrimary"
                    android:textSize="17sp"
                    tools:text="23/01/2017"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:textColor="@color/textColorItemPrimary"
                    android:textSize="17sp"
                    tools:text="01:38"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/textColorItemPrimary"
                    android:textSize="17sp"
                    tools:text="http://swapi.co/api/people/"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:textColor="@color/textColorItemPrimary"
                    android:textSize="17sp"
                    tools:text="-23.545950,-46.312312"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    />
            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading_indicator"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</ScrollView>