<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <TextView
        android:id="@+id/film_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:textStyle="bold"
        android:textColor="@color/textColorItemPrimary"
        android:textSize="16sp"
        tools:text="Luke Skywalker"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"

            android:text="@string/director_name"
            android:textColor="@color/textColorItemPrimary"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/film_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_marginStart="3dp"
            android:maxLines="1"
            android:textColor="@color/textColorItemPrimary"
            android:textSize="12sp"
            tools:text="Luke Skywalker"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/producer_name"
            android:textColor="@color/textColorItemPrimary"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/film_producer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_marginStart="3dp"
            android:maxLines="1"
            android:textColor="@color/textColorItemPrimary"
            android:textSize="12sp"
            tools:text="Luke Skywalker"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/release_date"
            android:textColor="@color/textColorItemDetail"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/film_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_marginStart="3dp"
            android:maxLines="1"
            android:textColor="@color/textColorItemDetail"
            android:textSize="12sp"
            tools:text="T51"
            />
        </LinearLayout>


</LinearLayout>